# mogiAi-ios-backend

./: .gitignore  Dockerfile  alembic.ini  alembic_migration_template.py  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 001_add_supabase_id.py  002_add_practice_evaluation_fields.py  96331842220a_add_overall_eval_to_interviews.py
app/: __init__.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  achievements.py  analysis.py  auth.py  careerjet.py  corporate.py  evaluations.py  generate_interview_params.py  google_tts.py  interview_experiences.py  interviews.py  practice.py  realtime_interview.py  segmented_interview.py  speech.py  stream_interview.py  tts.py  video_analysis.py
app/config/: brief_feedback_lookup.json  evaluation_strategies.json  interview-params.json  llm_config.json
app/config/evaluation/: INTEGRATION_SUMMARY.md  unified_evaluation_config.yaml
app/core/: auth.py  config.py  database.py  llm_factory.py  middleware.py  redis.py  supabase.py
app/models/: __init__.py  achievement.py  corporate.py  evaluation.py  interview.py  interview_experience.py  practice.py  user.py
app/schemas/: __init__.py  achievement.py  corporate.py  evaluation.py  interview.py  interview_experience.py  practice.py  user.py  video_analysis.py
app/services/: ai_service.py  answer_polish_service.py  audio_chunk_buffer.py  auth_service.py  corporate_service.py  deepseek_interview_service.py  evaluation_service.py  fast_evaluation_adapter.py  fast_interview_evaluator.py  fast_text_feedback_service.py  glm_realtime_bridge.py  google_tts_service.py  interview_evaluation_orchestrator.py  interview_framework_service.py  interview_history_service.py  interview_params_service.py  interview_service.py  interview_session_manager.py  interview_streaming_helper.py  interview_task_queue_service.py  interview_video_processor.py  langchain_service.py  speech_service.py  storage_service.py  stream_evaluation_adapter.py  supabase_video_service.py  unified_evaluation_service.py  video_analysis_service.py  video_chunk_buffer.py  video_evaluator.py  video_nonverbal_analyzer.py  video_segment_analysis_queue.py
app/services/evaluation/: __init__.py
app/services/evaluation/business/: __init__.py  entities.py  enums.py  repositories.py  services.py  value_objects.py
app/services/evaluation/loggers/: __init__.py  context.py  log_id_middleware.py  simple_logger.py
app/services/evaluation/public/: README.md  __init__.py  evaluation_api.py  example_usage.py  two_phase_evaluation_api.py  two_phase_evaluation_example.py
app/services/evaluation/repositories/: __init__.py  dialog_section_repo.py  evaluation_record_repo.py  evaluation_strategy_repo.py  (+5 more)
data/: preset_companies.json
migrations/: add_personalities_career_tendencies.sql  add_user_preferences.sql  create_interview_videos_bucket.sql  supabase_add_personalities_career_tendencies.sql
scripts/: init_corporate_data.py  init_practice_data.py
(+118 files in other folders)
